# flaat

./: .env-template  .gitignore  .mdlrc  .pylintrc  .readthedocs.yaml  CODE_OF_CONDUCT  CONTRIBUTING  Makefile  README.md  aarc_g002_matcher.py  client_secrets_deep.json  conftest.py  example-aio.py  example-fastapi.py  example-flask.py  example.py  exaple.py  flask_oidc.patch  get_userinfo.py  install.sh  logsetup.py  oidc-demo.py  oidc-minimalistic-api-demo.py  pytest.ini  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test_env.sh  tox.ini
.github/workflows/: checks.yml  ci.yml  pyright.yml
doc/source/: api.rst  conf.py  development.rst  index.rst  installation.rst  requirements.txt
doc/source/cli/: flaat-get_userinfo.rst  flaat-userinfo.rst
doc/source/configuration/: index.rst  sample-aio.rst  sample-fastapi.rst  sample-flask.rst
doc/source/flaat/: development.rst  flaat-userinfo.rst  installation.rst
doc/source/flaat/api/: config.rst  index.rst
doc/source/flaat/examples/: aio.rst  fastapi.rst  flask.rst
examples/: aio.py  example_aio.py  example_fastapi.py  example_flask.py  life-test.sh  logsetup.py  requirements.txt  testing.sh
flaat/: __init__.py  aarc_g002_matcher.py  access_tokens.py  caches.py  config.py  exceptions.py  flaat_exceptions.py  flaat_test.py  flaat_test_old.py  flaat_userinfo.py  issuers.py  issuertools.py  logsetup.py  opconfig.py  requirements.py  test_env.py  tokentools.py  tokentools_test.py  user_infos.py
flaat/aio/: __init__.py  aio_test.py  overrides_test.py
flaat/fastapi/: __init__.py  fastapi_test.py
flaat/flask/: __init__.py  conftest.py  flask_test.py  flask_test_cases.py
flaat/tests/: access_tokens_test.py  flaat_test.py  flaat_userinfo_test.py  issuers_test.py  issuertools_test.py  requirements_test.py  tokentools_test.py
flat/: __init__.py  issuertools.py  tokentools.py
floidau/: __init__.py
tests/: aarc_g002.py  life-test.sh  tokentools_test.py
