[metadata]
name = flaat
summary = FLAsk support for oidc Access Tokens
description-file = README.md
description-content-type = text/markdown; charset=UTF-8

author = Marcus Hardt
author-email = hardt@kit.edu

home-page = https://github.com/indigo-dc/flaat
project_urls =
    Bug Tracker = https://github.com/indigo-dc/flaat/issues
    Documentation = https://github.com/indigo-dc/flaat/blob/master/README.md

license = MIT 
license_file = LICENSE

classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: System :: Systems Administration
    Topic :: System :: Systems Administration :: Authentication/Directory  
    Topic :: Utilities

[options.entry_points]
console_scripts =
    flaat-userinfo=flaat.flaat_userinfo:main


[bdist_wheel]
universal = 1

[files]
packages =
    flaat

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
#
[upload_sphinx]
upload-dir = doc/build/html
