[metadata]
name = flaat
summary = User authorization for OIDC authenticated python web APIs.
description_file = README.md
description_content_type = text/markdown; charset=UTF-8

author = Marcus Hardt
author_email = hardt@kit.edu

home_page = https://github.com/indigo-dc/flaat
project_urls =
    Bug Tracker = https://github.com/indigo-dc/flaat/issues
    Documentation = https://flaat.readthedocs.io/en/latest/

license = MIT
license_files = LICENSE

classifier =
    Environment :: Console
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: System :: Systems Administration
    Topic :: System :: Systems Administration :: Authentication/Directory

[options.entry_points]
console_scripts =
    flaat-userinfo=flaat.flaat_userinfo:main

[bdist_wheel]
universal = 1

[files]
packages =
    flaat

[extras]
flask =
	Flask
aiohttp =
	aiohttp
fastapi =
	fastapi>=0.61.2
